feat: pagination to sostenible upgrades